🎪🏡 Checkpoint ./index.html:47020533/816

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
   <!-- End Google Tag Manager -->
-  <link rel="icon" type="image/png" href="/favicon.png"/>
+  <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1079817087637278750/1135887391610114239/Devils.png"/>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Portfolio</title>
+  <title>Alloxxa</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -63,7 +63,19 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Prerak Raja</a></h1>
+      <h1><a id="yazi">Alloxxa</a></h1>
+      <audio id="ses" src="https://cdn.discordapp.com/attachments/1079817087637278750/1135886465889476628/Yuregimde_Yara_Var_-_Ferdi_Tayfur.mp3"></audio>
+    <script>
+        // yazıyı seç ve değişkene ata
+        var yazi = document.getElementById("yazi");
+        // ses dosyasını seç ve değişkene ata
+        var ses = document.getElementById("ses");
+        // yazıya tıklama olayı ekle
+        yazi.addEventListener("click", function() {
+            // ses dosyasını oynat
+            ses.play();
+        });
+    </script>
       <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
