--- a/index.html
+++ b/index.html
@@ -76,27 +76,20 @@
             ses.play();
         });
     </script>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">I'm <span class="typing" style="color:#cd161b"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
           <li><a href="#about"><span>About</span></a></li>
-          <li><a href="#education"> <span>Education</span></a></li>
-          <li><a href="#experience"> <span>Experience</span></a></li>
-<!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
-          <li><a href="#portfolio"> <span>Projects</span></a></li>
-          <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
-          <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
-          <li><a href="#contacts"> <span>Contact</span></a></li>
+          <li><a href="#links"> <span>Links</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.github.com/Alloxl" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:networkify@outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
@@ -115,7 +108,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+          <img src="https://cdn.discordapp.com/attachments/1079817087637278750/1135887391610114239/Devils.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
