--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-english-input" style="color: #1c7d32;"></i>
+            <i class="ri-english-input" style="color: #cd161b;"></i>
             <h3>Natural Language Processing</h3>
           </div>
         </div>
