--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.github.com/Alloxl" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:networkify@outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
-
       </div>
 
     </div>
@@ -111,21 +109,31 @@
           <img src="https://cdn.discordapp.com/attachments/1079817087637278750/1135887391610114239/Devils.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+          <p>I'm Developer
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mersin, TR</li>
+                <li><i class="icofont-rounded-right" id="yazi2"></i> <strong>Football Team:</strong> Mersin İdman Yurdu</li>
+                <audio id="ses2" src="https://cdn.discordapp.com/attachments/1079817087637278750/1135886465889476628/Yuregimde_Yara_Var_-_Ferdi_Tayfur.mp3"></audio>
+                <script>
+        // yazıyı seç ve değişkene ata
+        var yazi = document.getElementById("yazi2");
+        // ses dosyasını seç ve değişkene ata
+        var ses = document.getElementById("ses2");
+        // yazıya tıklama olayı ekle
+        yazi.addEventListener("click", function() {
+            // ses dosyasını oynat
+            ses.play();
+        });
+    </script>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> networkify@outlook.com</li>
+                <!-- <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 </li> -->
               </ul>
             </div>
           </div>
@@ -613,26 +621,15 @@
         <h2>Links</h2>
       </div>
       <div class="row">
-        <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+       <!-- <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
           <a href="" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="" target="_blank">Resume</a></h4>
+          <h4 class="title"><a href="" target="_blank"></a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
-        </div>
+        </div> -->
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up">
           <a href="http://betterritorial.my.to" target="_blank"><div class="icon"><i class="icofont-link"></i></div></a>
           <h4 class="title"><a href="http://betterritorial.my.to" target="_blank">Betterritorial.io</a></h4>
           <p class="description" style="color:#fff;"> Modified Territorial.io</p>
-        </div>
-         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://techingenious.herokuapp.com/" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://techingenious.herokuapp.com/" target="_blank">Blog</a></h4>
-          <p class="description" style="color:#fff;">Blog containing articles on AI, coding, development</p>
-        </div>
-                 <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://techingenious.herokuapp.com/" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://techingenious.herokuapp.com/" target="_blank">Blog</a></h4>
-          <p class="description" style="color:#fff;">Blog containing articles on AI, coding, development</p>
-        </div>
       </div>
     </div>
   </section> <!--End Links Section -->
@@ -666,7 +663,6 @@
             <div class="social-links">
               <a href="https://www.github.com/Alloxl" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="mailto:networkify.outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
-
             </div>
           </div>
         </div>
