🏑🍂 Checkpoint ./index.html:47020533/1010 ./x.html:47020533/62911

--- a/index.html
+++ b/index.html
@@ -115,19 +115,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mersin, TR</li>
-                <li><i class="icofont-rounded-right" id="yazi2"></i> <strong>Football Team:</strong> Mersin İdman Yurdu</li>
-                <audio id="ses2" src="https://cdn.discordapp.com/attachments/1079817087637278750/1135886465889476628/Yuregimde_Yara_Var_-_Ferdi_Tayfur.mp3"></audio>
-                <script>
-        // yazıyı seç ve değişkene ata
-        var yazi = document.getElementById("yazi2");
-        // ses dosyasını seç ve değişkene ata
-        var ses = document.getElementById("ses2");
-        // yazıya tıklama olayı ekle
-        yazi.addEventListener("click", function() {
-            // ses dosyasını oynat
-            ses.play();
-        });
-    </script>
+                <li><i class="icofont-rounded-right"></i> <strong>Football Team/s:</strong> Mersin İdman Yurdu, Beşiktaş</li>
               </ul>
             </div>
             <div class="col-lg-6">
