--- a/game.html
+++ b/game.html
@@ -14,5 +14,7 @@
 	-->
 	</script>
 	<br/>
+	<div align="center">
+		<small>Created using <a href="http://www.ambiera.com/coppercube/index.html">CopperCube</a></small>	</div>
 </body>
 </html>
