--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
           <a href="https://www.github.com/Alloxl" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:networkify@outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
         <a href="https://discord.gg/N2ZzTdnkWd" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+        <a href="https://alloxxa.itch.io/" target="_blank" class="link"><i class="bx bx-joystick"></i></a>
         <a href="http://betterritorial.my.to" target="_blank" class="link"><i class="bx bx-link"></i></a>
       </div>
-
+      <iframe frameborder="0" src="https://itch.io/embed/2212700?border_width=5&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=f3c3d1&amp;border_color=000000" width="560" height="175"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
     </div>
   </header><!-- End Header -->
 
