--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <br>
       <br>
-      <iframe frameborder="0" src="https://itch.io/embed/2212700?border_width=5&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=f3c3d1&amp;border_color=000000" width="560" height="175"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
+      <iframe frameborder="0" src="https://itch.io/embed/2212700?border_width=5&amp;bg_color=020f1c&amp;fg_color=ffffff&amp;link_color=f3c3d1&amp;border_color=020f1c" width="560" height="175"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
     </div>
   </header><!-- End Header -->
 
