--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
           <a href="mailto:networkify@outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
         <a href="https://discord.gg/N2ZzTdnkWd" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
         <a href="https://alloxxa.itch.io/" target="_blank" class="link"><i class="bx bx-joystick"></i></a>
-        <a href="http://betterritorial.my.to" target="_blank" class="link"><i class="bx bx-link"></i></a>
+        <!-- <a href="http://betterritorial.my.to" target="_blank" class="link"><i class="bx bx-link"></i></a> -->
       </div>
       <br>
       <br>
-      <iframe frameborder="0" src="https://itch.io/embed/2212700?border_width=5&amp;bg_color=010e1b&amp;fg_color=ffffff&amp;link_color=f3c3d1&amp;border_color=010e1b" width="560" height="175"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
+      <iframe frameborder="0" src="https://itch.io/embed/2212700?bg_color=010e1b&amp;fg_color=c1de01&amp;link_color=ffffff&amp;border_color=333333" width="552" height="167"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
     </div>
   </header><!-- End Header -->
 
