--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             ses.play();
         });
     </script>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#cd161b"></span></h2>
+      <h2 style="color:#fff">I'm <span class="typing" style="color:#c1de01"></span></h2>
 
       <div class="social-links">
           <a href="https://www.github.com/Alloxl" target="_blank" class="github"><i class="bx bxl-github"></i></a>
