--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
   <!-- End Google Tag Manager -->
-  <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1079817087637278750/1135887391610114239/Devils.png"/>
+  <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1079817087637278750/1147633591413657712/alloxxa_-_O_preview.png"/>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a id="yazi">Alloxxa</a></h1>
-      <audio id="ses" src="https://cdn.discordapp.com/attachments/1079817087637278750/1135904784654807060/Sebastian-Yoluma-Tas-Koysalar-Onu-Severim.mp3"></audio>
+      <audio id="ses" src="https://cdn.discordapp.com/attachments/1079817087637278750/1147633917944410225/SPOTIFY-DOWNLOADER.COM_Gunluklerim_Aylk_Olmus.mp3"></audio>
     <script>
         // yazıyı seç ve değişkene ata
         var yazi = document.getElementById("yazi");
@@ -76,18 +76,19 @@
             ses.play();
         });
     </script>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#c1de01"></span></h2>
+      <h2 style="color:#fff">I'm <span class="typing" style="color:#c91b26"></span></h2>
 
       <div class="social-links">
           <a href="https://www.github.com/Alloxl" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:networkify@outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
         <a href="https://discord.gg/N2ZzTdnkWd" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
         <a href="https://alloxxa.itch.io/" target="_blank" class="link"><i class="bx bx-joystick"></i></a>
+        <a href="http://har.ix.tc/" target="_blank" class="link"><i class="bx bx-link"></i></a>
         <!-- <a href="http://betterritorial.my.to" target="_blank" class="link"><i class="bx bx-link"></i></a> -->
       </div>
       <br>
       <br>
-      <iframe frameborder="0" src="https://itch.io/embed/2212700?bg_color=010e1b&amp;fg_color=c1de01&amp;link_color=ffffff&amp;border_color=333333" width="552" height="167"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
+      <iframe frameborder="0" src="https://itch.io/embed/2212700?bg_color=010e1b&amp;fg_color=c91b26&amp;link_color=ffffff&amp;border_color=333333" width="552" height="167"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
     </div>
   </header><!-- End Header -->
 
