--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
 </head>
 
 <body>
+  <div style="display:none;">
+    <div id="google_translate_element"></div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+new google.translate.TranslateElement(
+{pageLanguage: 'en', includedLanguages: 'en,ar,ru,tr,az,de'},
+'google_translate_element'
+);
+}
+</script>
+<script type="text/javascript" src= "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+  </div>
   
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
