--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
+<html>
+<head>
+<title></title>
+<meta http-equiv="refresh" content="1; URL=https://alloxxa.com.tr/">
+</head>
+<body>
+</body>
+</html>
+
+
+<!--<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
-  <!-- End Google Tag Manager -->
   <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1079817087637278750/1147633591413657712/alloxxa_-_O_preview.png"/>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -17,10 +26,8 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
@@ -28,11 +35,9 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169007209-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -41,15 +46,6 @@
 
     gtag('config', 'UA-169007209-3');
   </script>
-
-
-
-  <!-- =======================================================
-  * Template Name: Personal - v2.1.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -67,11 +63,9 @@ new google.translate.TranslateElement(
 </script>
   </div>
   
-  <!-- Google Tag Manager (noscript) -->
+
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <!-- ======= Header ======= -->
   <header id="header" class="header-tops">
 
     <div class="container">
@@ -97,15 +91,13 @@ new google.translate.TranslateElement(
         <a href="https://discord.gg/N2ZzTdnkWd" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
         <a href="https://alloxxa.itch.io/" target="_blank" class="link"><i class="bx bx-joystick"></i></a>
         <a href="http://har.ix.tc/" target="_blank" class="link"><i class="bx bx-link"></i></a>
-        <!-- <a href="http://betterritorial.my.to" target="_blank" class="link"><i class="bx bx-link"></i></a> -->
       </div>
       <br>
       <br>
       <iframe frameborder="0" src="https://itch.io/embed/2212700?bg_color=010e1b&amp;fg_color=c91b26&amp;link_color=ffffff&amp;border_color=333333" width="552" height="167"><a href="https://alloxxa.itch.io/kurt-vadi">kurt vadi by Alloxxa</a></iframe>
     </div>
-  </header><!-- End Header -->
+  </header>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -125,9 +117,9 @@ new google.translate.TranslateElement(
     });
   </script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
 
 </html>
+-->
